# reconstruct

./: CMakeLists.txt  README.md  STL.h  main.cpp  makeAll.sh  out.stl  out_1.mesh  out_1.vtu  output_to_vtu.h  todo  write_vtu.h
data/: kitten.xyz  pointData.xyz
